crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__parse_word_complex_with_offset@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(word, errors.into_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 393,
                end: 398,
            },
            word_id: None,
            raw_text: "dog@c",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "dog",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: Some(
                C,
            ),
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
