crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__parse_word_offset_zero@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(word, errors.into_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 0,
                end: 0,
            },
            word_id: None,
            raw_text: "hello",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "hello",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
