crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__parse_word_with_offset@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(word, errors.into_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 893,
                end: 898,
            },
            word_id: None,
            raw_text: "world",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "world",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
