crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__parser_equivalence_main_tier_with_offset.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: main
---
Some(
    MainTier {
        speaker: SpeakerCode(
            "CHI",
        ),
        content: TierContent {
            linkers: TierLinkers(
                [],
            ),
            language_code: None,
            content: TierContentItems(
                [
                    Word(
                        Word {
                            span: Span {
                                start: 105,
                                end: 110,
                            },
                            word_id: None,
                            raw_text: "hello",
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "hello",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                    Word(
                        Word {
                            span: Span {
                                start: 111,
                                end: 116,
                            },
                            word_id: None,
                            raw_text: "world",
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "world",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                ],
            ),
            terminator: Some(
                Period {
                    span: Span {
                        start: 117,
                        end: 118,
                    },
                },
            ),
            postcodes: TierPostcodes(
                [],
            ),
            bullet: None,
            content_span: Some(
                Span {
                    start: 104,
                    end: 119,
                },
            ),
        },
        span: Span {
            start: 99,
            end: 119,
        },
        speaker_span: Span {
            start: 100,
            end: 103,
        },
    },
)
